# auth-manager

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONFIGURATION.md  Cargo.toml  EXTRACTION_SUMMARY.md  LICENSE  OPTIMIZATIONS.md  PRODUCTION_SETUP.md  README.md  diesel.toml  makefile
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml  tests.yml
auth-manager-api/: Cargo.toml  README.md
auth-manager-api/src/: error.rs  lib.rs  requests.rs  responses.rs  result.rs
docker/: Dockerfile  Dockerfile.lambda  docker-compose.test.yml  docker-compose.yml
infra/: Dockerfile  README.md  samconfig.toml  template.yaml
infra/params/: prod.json.example
migrations/00000000000001_create_users/: down.sql  up.sql
postman/: AuthManager.postman_collection.json
scripts/: deploy-lambda.sh  neon-check.sh
src/: app.rs  config.rs  docs.rs  error.rs  main.rs  response.rs
src/api/: README.md  error.rs  mod.rs  requests.rs  responses.rs  result.rs
src/auth/: extractors.rs  jwt.rs  mod.rs  password.rs  services.rs
src/db/: connection.rs  error.rs  mod.rs  schema.rs
src/db/models/: login_attempt.rs  mod.rs  refresh_token.rs  user.rs  user_identity.rs
src/db/repositories/: login_attempt_repository.rs  mod.rs  refresh_token_repository.rs  user_repository.rs
src/dto/: requests.rs  responses.rs
src/handlers/: auth.rs  health.rs  mod.rs  user.rs
src/utils/: mod.rs  response.rs
