[package]
name = "auth-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
lambda_http = "1.0.2"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
hyper = { version = "1.8.1", features = ["full"] } 
tracing-subscriber = "0.3.20"
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tracing = "0.1.44"
diesel = { version = "2.2.12", features = ["postgres", "r2d2", "uuid", "chrono"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
bcrypt = "0.18.0"
chrono = { version = "0.4.43", features = ["serde"] }
anyhow = "1.0.100"
once_cell = "1.21.3"
jsonwebtoken = { version = "10.2.0", features = ["p256", "rust_crypto"] }
