[package]
name = "auth-manager-api"
version = "0.1.0"
edition = "2024"
authors = ["DevRickyCst"]
description = "Shared API types for auth-manager - WASM-compatible"
license = "MIT"

[lints.rust]
future-incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "deny", priority = -2 }

[lints.clippy]
all = { level = "deny", priority = 10 }
redundant_clone = { level = "deny", priority = 9 }
manual_while_let_some = { level = "deny", priority = 4 }
pedantic = { level = "warn", priority = 3 }

[lib]
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.19.0", features = ["v4", "serde", "js"] }
chrono = { version = "0.4.43", features = ["serde", "wasmbind"] }
